// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`simulateLap (characterization) > produces a stable final classification, including retirements, for a seeded race 1`] = `
[
  {
    "condition": 2,
    "driverId": "d1",
    "gap": 0,
    "laps": 12,
    "lapsDown": 0,
    "mistakeCount": 0,
    "pitStops": 1,
    "position": 1,
    "retired": false,
    "retirementLap": null,
    "stints": 1,
    "totalTime": 1233.812,
    "tyre": "medium",
  },
  {
    "condition": 0,
    "driverId": "d3",
    "gap": 16.531,
    "laps": 12,
    "lapsDown": 0,
    "mistakeCount": 0,
    "pitStops": 1,
    "position": 2,
    "retired": false,
    "retirementLap": null,
    "stints": 1,
    "totalTime": 1250.343,
    "tyre": "medium",
  },
  {
    "condition": 0,
    "driverId": "d5",
    "gap": 24.335,
    "laps": 12,
    "lapsDown": 0,
    "mistakeCount": 0,
    "pitStops": 2,
    "position": 3,
    "retired": false,
    "retirementLap": null,
    "stints": 2,
    "totalTime": 1274.678,
    "tyre": "soft",
  },
  {
    "condition": 72,
    "driverId": "d4",
    "gap": 0.874,
    "laps": 12,
    "lapsDown": 0,
    "mistakeCount": 0,
    "pitStops": 2,
    "position": 4,
    "retired": false,
    "retirementLap": null,
    "stints": 2,
    "totalTime": 1275.552,
    "tyre": "medium",
  },
  {
    "condition": 72,
    "driverId": "d6",
    "gap": 14.391,
    "laps": 12,
    "lapsDown": 0,
    "mistakeCount": 0,
    "pitStops": 2,
    "position": 5,
    "retired": false,
    "retirementLap": null,
    "stints": 2,
    "totalTime": 1289.943,
    "tyre": "hard",
  },
  {
    "condition": 100,
    "driverId": "d2",
    "gap": 0,
    "laps": 0,
    "lapsDown": 0,
    "mistakeCount": 0,
    "pitStops": 0,
    "position": 6,
    "retired": true,
    "retirementLap": 1,
    "stints": 0,
    "totalTime": 0.5,
    "tyre": "medium",
  },
]
`;

exports[`simulateLap (characterization) > records a god-mode forced retirement and classifies the car out of the running 1`] = `
[
  {
    "condition": 1,
    "driverId": "d4",
    "gap": 0,
    "laps": 12,
    "lapsDown": 0,
    "mistakeCount": 0,
    "pitStops": 1,
    "position": 1,
    "retired": false,
    "retirementLap": null,
    "stints": 1,
    "totalTime": 1252.578,
    "tyre": "medium",
  },
  {
    "condition": 73,
    "driverId": "d1",
    "gap": 2.587,
    "laps": 12,
    "lapsDown": 0,
    "mistakeCount": 0,
    "pitStops": 2,
    "position": 2,
    "retired": false,
    "retirementLap": null,
    "stints": 2,
    "totalTime": 1255.165,
    "tyre": "medium",
  },
  {
    "condition": 11,
    "driverId": "d5",
    "gap": 20.317,
    "laps": 12,
    "lapsDown": 0,
    "mistakeCount": 0,
    "pitStops": 2,
    "position": 3,
    "retired": false,
    "retirementLap": null,
    "stints": 2,
    "totalTime": 1275.482,
    "tyre": "soft",
  },
  {
    "condition": 87,
    "driverId": "d6",
    "gap": 18.679,
    "laps": 12,
    "lapsDown": 0,
    "mistakeCount": 0,
    "pitStops": 2,
    "position": 4,
    "retired": false,
    "retirementLap": null,
    "stints": 2,
    "totalTime": 1294.161,
    "tyre": "hard",
  },
  {
    "condition": 34,
    "driverId": "d3",
    "gap": 0,
    "laps": 4,
    "lapsDown": 0,
    "mistakeCount": 0,
    "pitStops": 0,
    "position": 5,
    "retired": true,
    "retirementLap": 5,
    "stints": 0,
    "totalTime": 409.051,
    "tyre": "medium",
  },
  {
    "condition": 100,
    "driverId": "d2",
    "gap": 0,
    "laps": 0,
    "lapsDown": 0,
    "mistakeCount": 0,
    "pitStops": 0,
    "position": 6,
    "retired": true,
    "retirementLap": 1,
    "stints": 0,
    "totalTime": 0.5,
    "tyre": "medium",
  },
]
`;
